Fix stretched-link with buttons

--- a/assets/scss/material/_buttons.scss
+++ b/assets/scss/material/_buttons.scss
@@ -23,7 +23,6 @@
   min-width: $btn-min-width;
   outline: none;
   padding: $btn-padding-y $btn-padding-x;
-  position: relative;
   text-transform: uppercase;
   user-select: none;
   vertical-align: middle;
